--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   firebase_auth: ^0.15.4
   google_sign_in: ^4.1.1
   cloud_firestore: ^0.13.0+1
+  font_awesome_flutter: ^8.5.0
+  carousel_slider: ^1.4.1
+  flutter_custom_clippers: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/slides/
+    - assets/images/productos/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
