--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   carousel_slider: ^1.4.1
   flutter_custom_clippers: ^1.1.0
+  cached_network_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
